Fix sonar's issue